# remote-test

./: CMakeLists.txt  main.cpp
include/: client.h  server.h
src/: client.cpp  server.cpp
